# charges

./: CMakeLists.txt  README.md  charges%2B%2B.kdev4  convert.hpp  eemparams.cpp  eemparams.hpp  eemsolver.cpp  eemsolver.hpp  invalidparamline.cpp  invalidparamline.hpp  main.cpp  test_convert.hpp  test_eemparams.cpp  test_eemparams.hpp  undefinedeemparameter.cpp  undefinedeemparameter.hpp  verifythrow.hpp
cmake/modules/: FindOpenBabel2.cmake
testovaci_data_Ján_Randis/Phenol Molecules/: 01 - NSC_4960.mol  02 - NSC_70955.mol  03 - NSC_53558.mol  04 - NSC_400524.mol  05 - NSC_60108.mol  info.xls
testovaci_data_Ján_Randis/Sets of EEM Parameters/01 - Yang 1994/: 1a.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/02 - Bakowies 1995/: 1b.txt  2b.txt  3b.txt  4b.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/03 - Yang 1996/: 1c.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/04 - Njo 1998/: 1d.txt  2d.txt  3d.txt  4d.txt  5d.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/05 - Bultinck 2002/: 1e.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/06 - Bultinck 2002/: 1f.txt  2f.txt  3f.txt  4f.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/07 - Bultinck 2004/: 1g.txt  2g.txt  3g.txt  4g.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/08 - Varekova 2007/: 1h.txt  2h.txt  3h.txt  4h.txt
testovaci_data_Ján_Randis/Sets of EEM Parameters/09 - Ouyang 2009/: 1i.txt  2i.txt
